--- a/css-exercise-01/index.html
+++ b/css-exercise-01/index.html
@@ -11,12 +11,12 @@
 
     <div class="container">
       <div class="card text-center">
-        <img src="../shared/images/boris.jpg" alt="Boris Paillard" id="img-profile" class="img-circle">
-        <h1>Boris Paillard</h1>
-        <h2>CEO @Le Wagon</h2>
+        <img src="../img/mary.jpg" alt="Mariany Morais" id="img-profile" class="img-circle">
+        <h1>Mary Morais</h1>
+        <h2>Masters Student</h2>
 
         <p>
-          After 3 years in financial markets, I got bored and launched Le Wagon. Our mission: <strong>bring technical skills to creative people</strong>.
+          Bacharela em Sistemas de informação pela <strong>UFMS - CPTL</strong>. Agora mestranda em Ciências da Computação pela <strong>USP - ICMC</strong>
         </p>
 
         <a href="https://lewagon.com" class="btn-red">See for yourself</a>
@@ -48,29 +48,29 @@
           <tbody>
             <tr>
               <td>
-                <img src="../shared/images/space-odyssey.jpg" alt="space odyssey">
+                <img src="../img/moulin.jpg" alt="space odyssey">
               </td>
               <td>
-                <h3>2001 - Space Odyssey</h3>
-                <p>Humanity finds a mysterious, obviously artificial, object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="../shared/images/monsieur-hulot.jpg" alt="monsieur hulot">
-              </td>
-              <td>
-                <h3>Monsieur Hulot</h3>
-                <p>Monsieur Hulot comes to a beachside hotel for a vacation, where he accidentally (but good-naturedly) causes havoc.</p>
+                <h3>Moulin Rougue</h3>
+                <p>The film tells the story of a young English poet/writer, Christian, who falls in love with the star of the Moulin Rouge, cabaret actress and courtesan Satine. It uses the musical setting of the Montmartre Quarter of Paris, France</p>
               </td>
             </tr>
             <tr>
               <td>
-                <img src="../shared/images/alien.jpg" alt="alien">
+                <img src="../img/your.jpg" alt="monsieur hulot">
               </td>
               <td>
-                <h3>Alien</h3>
-                <p>The commercial vessel Nostromo receives a distress call from an unexplored planet. After searching for survivors, the crew heads home only to realize that a deadly bioform has joined them.</p>
+                <h3>Your Name</h3>
+                <p>Your Name tells the story of Taki, a high school boy in Tokyo and Mitsuha, a high school girl in a rural town, who suddenly and inexplicably begin to swap bodies.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="../img/crank.jpg" alt="alien">
+              </td>
+              <td>
+                <h3>Crank</h3>
+                <p>The plot centres on a British hitman in Los Angeles named Chev Chelios who is poisoned and must keep his adrenaline flowing constantly in order to keep himself alive. He does so by various methods including taking drugs and getting into fights, while he tries to track down the man who poisoned him. </p>
               </td>
             </tr>
           </tbody>
@@ -78,23 +78,17 @@
       </div>
 
       <div class="card text-center">
-        <h2>About this page</h2>
-        This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.
+        <h2>Others Interests</h2>
+        Talking a little more about me:
         <ul class="list-inline">
          <li>
-           <a href="#">
-             <i class="fa fa-heart"></i>
-           </a>
+           <p>Animes</p>
          </li>
          <li>
-           <a href="#">
-             <i class="fa fa-share"></i>
-           </a>
+           <p>HQs</p>
          </li>
          <li>
-           <a href="#">
-             <i class="fa fa-star"></i>
-           </a>
+           <a href="insta">instagram</a>
          </li>
         </ul>
       </div>
