--- a/css-exercise-01/index.html
+++ b/css-exercise-01/index.html
@@ -18,24 +18,22 @@
         <p>
           Bacharela em Sistemas de informação pela <strong>UFMS - CPTL</strong>. Agora mestranda em Ciências da Computação pela <strong>USP - ICMC</strong>
         </p>
-
-        <a href="https://lewagon.com" class="btn-red">See for yourself</a>
       </div>
 
       <div class="card text-center">
         <ul class="list-inline">
           <li class="text-center">
-            <a href="https://www.facebook.com/boris.paillard">
+            <a href="https://www.facebook.com/">
               <i class="fa fa-facebook"></i> <br>Facebook
             </a>
           </li>
           <li class="text-center">
-            <a href="https://www.linkedin.com/in/boris-paillard-86722670">
+            <a href="https://www.linkedin.com/in/">
               <i class="fa fa-linkedin"></i> <br>Linkedin
             </a>
           </li>
           <li class="text-center">
-            <a href="https://twitter.com/bpapillard">
+            <a href="https://twitter.com/">
               <i class="fa fa-twitter"></i> <br>Twitter
             </a>
           </li>
@@ -48,7 +46,7 @@
           <tbody>
             <tr>
               <td>
-                <img src="../img/moulin.jpg" alt="space odyssey">
+                <img src="../img/moulin.jpg" alt="moulin rougue">
               </td>
               <td>
                 <h3>Moulin Rougue</h3>
@@ -57,7 +55,7 @@
             </tr>
             <tr>
               <td>
-                <img src="../img/your.jpg" alt="monsieur hulot">
+                <img src="../img/your.jpg" alt="your name">
               </td>
               <td>
                 <h3>Your Name</h3>
@@ -66,7 +64,7 @@
             </tr>
             <tr>
               <td>
-                <img src="../img/crank.jpg" alt="alien">
+                <img src="../img/crank.jpg" alt="crank">
               </td>
               <td>
                 <h3>Crank</h3>
